# djinnax

./: .gitignore  AGENTS.md  CLAUDE.md  HOW_TO_RUN.md  LEARNINGS.md  NOTICE  PORTING_PLAYBOOK.md  README.md  WRITING_FAST_ENVS.md  pyproject.toml  reference-engines
.github/workflows/: ci.yml
ChatGptSolAudits/: INDEPENDENT_STATIC_AUDIT_2026-07-21.md
benchmarks/: ab_timing.py  bench_head_to_head.py  canmask_ab.py  canmask_analytic_ab.py  floor_bench.py  megakernel_canmask_ab.py  megakernel_orient_ab.py  megakernel_rowmove_ab.py  orient_gather_ab.py  pallas_lab.py  rng_rounds_ab.py  soko_carry_ab.py  soko_gated_ab.py  spawn_collapse_ab.py  spawn_variants_ab.py  sweep_stats.py
checks/: check_megakernel.py  check_parity.py
data/: e1_megakernel_canmask_ab.jsonl  e2_canmask_analytic_ab.jsonl  e3_soko_dce_ab.jsonl  e5_rowmove_ab.jsonl  p1_orient_ab.jsonl  p23_spawn_ab.jsonl  p4_orient_gather_ab.jsonl  p5_canmask_ab.jsonl  p6_soko_carry_ab.jsonl  p8_rng_rounds_ab.jsonl  ps1_soko_gated_ab.jsonl  sweep_official_v2.jsonl  sweep_official_v3.jsonl
djinnax/: __init__.py  distributions.py  game2048.py  game2048_lut.py  megakernel.py  megakernel_rng.py  refs.py  runtime.py  soko_levels.py  soko_ref_generator.py  sokoban.py  ttt.py
docs/: EXTERNAL_REVIEW_R1.md  EXTERNAL_REVIEW_R2.md  HARDENING_ROUND2_PLAN.md  MEGAKERNEL_PLAN.md  RESULTS_HISTORY.md
tests/: conftest.py  test_bench_strict.py  test_distributions.py  test_game_parity.py  test_megakernel.py  test_readme_example.py  test_rng.py  test_soko_contract.py
