[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "djinnax"
version = "0.1.0"
description = "Batch-native, branchless JAX game environments with reference-parity gates and a benchmark methodology"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Donald Galliano III" }]
keywords = ["jax", "reinforcement-learning", "environments", "gpu", "pallas", "triton"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["jax>=0.10", "flax", "chex", "numpy"]

[project.optional-dependencies]
refs = ["svgwrite", "dm-env", "gymnasium", "requests", "matplotlib"]
test = ["pytest"]

[project.urls]
Homepage = "https://crawdata.ai"
Repository = "https://github.com/DonaldGallianoIII/djinnax"
Issues = "https://github.com/DonaldGallianoIII/djinnax/issues"

[tool.setuptools]
packages = ["djinnax"]
